@@ -1,5 +1,10 @@
 2008-09-16  Abel Cheung  <abelcheung@gmail.com>
 
+	* class.pmw.inc.php: Fix ImageMagick and PMW command invocation.
+	* wp-scorerender.php, class.scorerender.inc.php: Allows crude debugging.
+
+2008-09-16  Abel Cheung  <abelcheung@gmail.com>
+
 	* class.pmw.inc.php: New file for Philip's Music Writer support.
 	* wp-scorerender.php: Add changes necessary for PMW support.
 
